# Aether-Sim

./: .gitignore  .gitmodules  CAR_README.md  CarGuidance.md  QUAD_README.md  QuadGuidance.md  README.md  source_environment.sh
doc/: CarGuidance.md  CarInstallationGuide.md  CarOperatingGuide.md  QuadGuidance.md
src/AmovCar/launch/: mission_offboard_car.launch  t265_position_to_mavros.launch
src/P200/launch/: landing.launch  t265_position_to_mavros.launch
src/amovCar/: package.xml
src/mid/image_process/ros_kcf/video_pub/: CMakeLists.txt
src/mid/image_process/ros_vision/: CMakeLists.txt  README.md
src/mid/image_process/yolov3/: README.md
src/modules/px4_command/: CMakeLists.txt
src/modules/px4_command/include/: landing_quadrotor.h  mission_car_offboard.h  offboard_control.h
src/modules/px4_command/launch/: cartogra_tf_to_mavros.launch  landing.launch  t265_tf_to_mavros.launch
src/modules/px4_command/src/: position_to_mavros.cpp
src/modules/px4_control/: CMakeLists.txt  package.xml
src/modules/px4_control/include/: offboard_control.h  tracking_quadrotor.h
src/modules/px4_control/launch/: collision_avoidance_vfh.launch
src/modules/px4_control/src/: landing_quadrotor.cpp  mission_car_offboard.cpp  ros_nav_quadrotor.cpp  simulinkVFH.cpp  tracking_quadrotor.cpp
src/p200/: package.xml
src/simulation/: CMakeLists.txt
src/simulation/worlds/: amovCar.world  iscasMuseum.world
src/sup/motion_planning/: README.md
src/volans/: CMakeLists.txt  package.xml
src/volans/launch/: connect_pixhawk_usb.launch  open_d435_camera.launch
(+64 files in other folders)
